--- a/public/404.html
+++ b/public/404.html
@@ -19,7 +19,7 @@
 <meta property="og:type" content="article">
 <meta name="description" content="" />
 <meta name="twitter:card" content="summary" />
-<meta name="twitter:creator" content="@janedoe">
+<meta name="twitter:creator" content="">
 <meta name="twitter:title" content="404 Page not found" />
 <meta name="twitter:image" content="http://localhost:1313/images/thumbnail.png"/>
 <meta property="og:url" content="http://localhost:1313/404.html" />
@@ -86,14 +86,14 @@
   </div>
       
 <div class='follow'>
-  <a href="https://github.com/#">
+  <a href="https://github.com/p3t35">
     <svg class="icon">
   <title>github</title>
   <use xlink:href="#github"></use>
 </svg>
 
   </a>
-  <a href="https://www.linkedin.com/in/#">
+  <a href="https://www.linkedin.com/in/peter-summa-9936851b0/">
     <svg class="icon">
   <title>linkedin</title>
   <use xlink:href="#linkedin"></use>
@@ -198,8 +198,8 @@
 
 <footer class="footer">
   <div class="footer_inner wrap pale">
-    <img src='http://localhost:1313/icons/apple-touch-icon.png' class="icon icon_2 transparent" alt="Copyright © 2008–2018, Steve Francia and the Hugo Authors; all rights reserved.">
-    <p>Copyright&nbsp;<span class="year"></span>&nbsp;COPYRIGHT © 2008–2018, STEVE FRANCIA AND THE HUGO AUTHORS; ALL RIGHTS RESERVED.. All Rights Reserved</p><a class="to_top" href="#documentTop">
+    <img src='http://localhost:1313/icons/apple-touch-icon.png' class="icon icon_2 transparent" alt="ps-cloudlabs | Peter Summa">
+    <p>Copyright&nbsp;<span class="year"></span>&nbsp;PS-CLOUDLABS | PETER SUMMA. All Rights Reserved</p><a class="to_top" href="#documentTop">
   <svg class="icon">
   <title>to-top</title>
   <use xlink:href="#to-top"></use>
