--- a/setup/index.html
+++ b/setup/index.html
@@ -132,7 +132,8 @@
     <span class="post_time"> · 1 min read</span>
   </div>
 
-    <div class="post_body"><p>Current LAB Setup</p>
+    <div class="post_body"><p>Current LAB Setup
+work in progress</p>
 
     </div><div class="post_comments">
   
