--- a/my-setup/index.html
+++ b/my-setup/index.html
@@ -8,15 +8,12 @@
   
   
   >
-  <head>
-<title>Setup | Clarity</title>
+  <head><script src="/ps-cloudlabs/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=ps-cloudlabs/livereload" data-no-instant defer></script>
+<title>My Setup | Clarity</title>
 <meta charset="utf-8">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-
-
 
 
   
@@ -26,30 +23,30 @@
 <meta name="description" content="Hugo, the world&#39;s fastest framework for building websites" />
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:creator" content="">
-<meta name="twitter:title" content="Setup" />
-<meta name="twitter:image" content="https://p3t35.github.io/ps-cloudlabs/images/thumbnail.png"/>
-<meta property="og:url" content="https://p3t35.github.io/ps-cloudlabs/setup/" />
-<meta property="og:title" content="Setup" />
+<meta name="twitter:title" content="My Setup" />
+<meta name="twitter:image" content="http://localhost:1313/ps-cloudlabs/images/thumbnail.png"/>
+<meta property="og:url" content="http://localhost:1313/ps-cloudlabs/my-setup/" />
+<meta property="og:title" content="My Setup" />
 <meta property="og:description" content="Hugo, the world&#39;s fastest framework for building websites" />
-<meta property="og:image" content="https://p3t35.github.io/ps-cloudlabs/images/thumbnail.png" />
+<meta property="og:image" content="http://localhost:1313/ps-cloudlabs/images/thumbnail.png" />
 
-<link rel="apple-touch-icon" sizes="180x180" href="https://p3t35.github.io/ps-cloudlabs/icons/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="https://p3t35.github.io/ps-cloudlabs/icons/favicon-32x32.png">
-<link rel="manifest" href="https://p3t35.github.io/ps-cloudlabs/icons/site.webmanifest">
+<link rel="apple-touch-icon" sizes="180x180" href="http://localhost:1313/ps-cloudlabs/icons/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="http://localhost:1313/ps-cloudlabs/icons/favicon-32x32.png">
+<link rel="manifest" href="http://localhost:1313/ps-cloudlabs/icons/site.webmanifest">
 
-<link rel="canonical" href="https://p3t35.github.io/ps-cloudlabs/setup/">
-
-
-
-<link rel="preload" href="https://p3t35.github.io/ps-cloudlabs/css/styles.a556cef0edd8ecd9821e661f7f201d84cc18d0c6435703889db2949aea0eccb84b7ac9a2bb49093b03f5e7d9ce21c23c705efd6dcbd7e8018afae9a9f32ca095.css" integrity = "sha512-pVbO8O3Y7NmCHmYffyAdhMwY0MZDVwOInbKUmuoOzLhLesmiu0kJOwP159nOIcI8cF79bcvX6AGK&#43;ump8yyglQ==" as="style" crossorigin="anonymous">
+<link rel="canonical" href="http://localhost:1313/ps-cloudlabs/my-setup/">
 
 
 
-<link rel="preload" href="https://p3t35.github.io/ps-cloudlabs/en/js/bundle.492fda6518b05b9a608932ca1ecc3458b9f4d6e14a216b83c4fbe942d714198ffbf6dc8b3bbee558bdef41ed5b9be428715559466018ed940cf86eb135f8f6ae.js" as="script" integrity=
-"sha512-SS/aZRiwW5pgiTLKHsw0WLn01uFKIWuDxPvpQtcUGY/79tyLO77lWL3vQe1bm&#43;QocVVZRmAY7ZQM&#43;G6xNfj2rg==" crossorigin="anonymous">
+<link rel="preload" href="http://localhost:1313/ps-cloudlabs/css/styles.a556cef0edd8ecd9821e661f7f201d84cc18d0c6435703889db2949aea0eccb84b7ac9a2bb49093b03f5e7d9ce21c23c705efd6dcbd7e8018afae9a9f32ca095.css" integrity = "sha512-pVbO8O3Y7NmCHmYffyAdhMwY0MZDVwOInbKUmuoOzLhLesmiu0kJOwP159nOIcI8cF79bcvX6AGK&#43;ump8yyglQ==" as="style" crossorigin="anonymous">
 
 
-<link rel="stylesheet" type="text/css" href="https://p3t35.github.io/ps-cloudlabs/css/styles.a556cef0edd8ecd9821e661f7f201d84cc18d0c6435703889db2949aea0eccb84b7ac9a2bb49093b03f5e7d9ce21c23c705efd6dcbd7e8018afae9a9f32ca095.css" integrity="sha512-pVbO8O3Y7NmCHmYffyAdhMwY0MZDVwOInbKUmuoOzLhLesmiu0kJOwP159nOIcI8cF79bcvX6AGK&#43;ump8yyglQ==" crossorigin="anonymous">
+
+<link rel="preload" href="http://localhost:1313/ps-cloudlabs/en/js/bundle.470d638019b1ec17595892df5371e2c7f4da53ebc3885ffec54ba7885d73692d0daec14a05a2d2e0eb58c9dfa1ffe7e6f80599159475c255bf37b44024c75c2c.js" as="script" integrity=
+"sha512-Rw1jgBmx7BdZWJLfU3Hix/TaU&#43;vDiF/&#43;xUuniF1zaS0NrsFKBaLS4OtYyd&#43;h/&#43;fm&#43;AWZFZR1wlW/N7RAJMdcLA==" crossorigin="anonymous">
+
+
+<link rel="stylesheet" type="text/css" href="http://localhost:1313/ps-cloudlabs/css/styles.a556cef0edd8ecd9821e661f7f201d84cc18d0c6435703889db2949aea0eccb84b7ac9a2bb49093b03f5e7d9ce21c23c705efd6dcbd7e8018afae9a9f32ca095.css" integrity="sha512-pVbO8O3Y7NmCHmYffyAdhMwY0MZDVwOInbKUmuoOzLhLesmiu0kJOwP159nOIcI8cF79bcvX6AGK&#43;ump8yyglQ==" crossorigin="anonymous">
 
   </head>
   <body
@@ -60,8 +57,8 @@
   >
 
 <header class="nav_header" >
-  <nav class="nav"><a href='https://p3t35.github.io/ps-cloudlabs/' class="nav_brand nav_item" title="Clarity">
-  <img src="https://p3t35.github.io/ps-cloudlabs/logos/logo.png" class="logo" alt="Clarity">
+  <nav class="nav"><a href='http://localhost:1313/ps-cloudlabs/' class="nav_brand nav_item" title="Clarity">
+  <img src="http://localhost:1313/ps-cloudlabs/logos/logo.png" class="logo" alt="Clarity">
   <div class="nav_close">
     <div><svg class="icon">
   <title>open-menu</title>
@@ -82,13 +79,13 @@
         
 
   <div class="nav_parent">
-    <a href="https://p3t35.github.io/ps-cloudlabs/" class="nav_item" title="Home">Home </a>
-  </div>
-  <div class="nav_parent nav_active">
-    <a href="https://p3t35.github.io/ps-cloudlabs/setup/" class="nav_item" title="Setup">Setup </a>
+    <a href="http://localhost:1313/ps-cloudlabs/" class="nav_item" title="Home">Home </a>
   </div>
   <div class="nav_parent">
-    <a href="https://p3t35.github.io/ps-cloudlabs/about/" class="nav_item" title="About">About </a>
+    <a href="http://localhost:1313/ps-cloudlabs/setup/" class="nav_item" title="Setup">Setup </a>
+  </div>
+  <div class="nav_parent">
+    <a href="http://localhost:1313/ps-cloudlabs/about/" class="nav_item" title="About">About </a>
   </div>
       
 <div class='follow'>
@@ -120,7 +117,7 @@
   
 <div class="grid-inverse wrap content">
   <article class="post_content">
-    <h1 class="post_title">Setup</h1>
+    <h1 class="post_title">My Setup</h1>
   <div class="post_meta">
     <span><svg class="icon">
   <title>calendar</title>
@@ -128,7 +125,7 @@
 </svg>
 </span>
     <span class="post_date">
-      Jan 25, 2025</span>
+      Feb 28, 2019</span>
     <span class="post_time"> · 1 min read</span>
   </div>
 
@@ -170,13 +167,13 @@ work in progress</p>
     <h2 class="mt-4">Recent Posts</h2>
     <ul class="flex-column">
       <li>
-        <a href="https://p3t35.github.io/ps-cloudlabs/post/home-lab-setup/" class="nav-link" title="Home Lab Setup">Home Lab Setup</a>
+        <a href="http://localhost:1313/ps-cloudlabs/post/home-lab-setup/" class="nav-link" title="Home Lab Setup">Home Lab Setup</a>
       </li>
     </ul>
     <div>
       <h2 class="mt-4 taxonomy" id="tags-section">Tags</h2>
       <nav class="tags_nav">
-        <a href='https://p3t35.github.io/ps-cloudlabs/tags/homelab/' class="post_tag button button_translucent" title="homelab">
+        <a href='http://localhost:1313/ps-cloudlabs/tags/homelab/' class="post_tag button button_translucent" title="homelab">
           HOMELAB
           <span class="button_tally">1</span>
         </a>
@@ -270,7 +267,7 @@ work in progress</p>
 
 <footer class="footer">
   <div class="footer_inner wrap pale">
-    <img src='https://p3t35.github.io/ps-cloudlabs/icons/apple-touch-icon.png' class="icon icon_2 transparent" alt="ps-cloudlabs | Peter Summa">
+    <img src='http://localhost:1313/ps-cloudlabs/icons/apple-touch-icon.png' class="icon icon_2 transparent" alt="ps-cloudlabs | Peter Summa">
     <p>Copyright&nbsp;<span class="year"></span>&nbsp;PS-CLOUDLABS | PETER SUMMA. All Rights Reserved</p><a class="to_top" href="#documentTop">
   <svg class="icon">
   <title>to-top</title>
@@ -282,9 +279,9 @@ work in progress</p>
   </div>
 </footer>
 
-<script type="text/javascript" src="https://p3t35.github.io/ps-cloudlabs/en/js/bundle.492fda6518b05b9a608932ca1ecc3458b9f4d6e14a216b83c4fbe942d714198ffbf6dc8b3bbee558bdef41ed5b9be428715559466018ed940cf86eb135f8f6ae.js" integrity="sha512-SS/aZRiwW5pgiTLKHsw0WLn01uFKIWuDxPvpQtcUGY/79tyLO77lWL3vQe1bm&#43;QocVVZRmAY7ZQM&#43;G6xNfj2rg==" crossorigin="anonymous"></script>
+<script type="text/javascript" src="http://localhost:1313/ps-cloudlabs/en/js/bundle.470d638019b1ec17595892df5371e2c7f4da53ebc3885ffec54ba7885d73692d0daec14a05a2d2e0eb58c9dfa1ffe7e6f80599159475c255bf37b44024c75c2c.js" integrity="sha512-Rw1jgBmx7BdZWJLfU3Hix/TaU&#43;vDiF/&#43;xUuniF1zaS0NrsFKBaLS4OtYyd&#43;h/&#43;fm&#43;AWZFZR1wlW/N7RAJMdcLA==" crossorigin="anonymous"></script>
 
-  <script src="https://p3t35.github.io/ps-cloudlabs/js/search.min.73cb82d8f274395dd220d6594053cd3d3d8ac8c97d874b5142a60b9744f3704d765551e0ade104d5803c66b731f5a7a00ac2cff33c8c9090ff8100169a3e2574.js"></script>
+  <script src="http://localhost:1313/ps-cloudlabs/js/search.min.73cb82d8f274395dd220d6594053cd3d3d8ac8c97d874b5142a60b9744f3704d765551e0ade104d5803c66b731f5a7a00ac2cff33c8c9090ff8100169a3e2574.js"></script>
 
   </body>
 </html>
