--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
   
   >
   <head>
-<title>404 Page not found | Clarity</title>
+<title>404 Page not found | PS-Cloudlabs</title>
 <meta charset="utf-8">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -57,8 +57,8 @@
   >
 
 <header class="nav_header" >
-  <nav class="nav"><a href='https://p3t35.github.io/ps-cloudlabs/' class="nav_brand nav_item" title="Clarity">
-  <img src="https://p3t35.github.io/ps-cloudlabs/logos/logo.png" class="logo" alt="Clarity">
+  <nav class="nav"><a href='https://p3t35.github.io/ps-cloudlabs/' class="nav_brand nav_item" title="PS-Cloudlabs">
+  <img src="https://p3t35.github.io/ps-cloudlabs/logos/logo.png" class="logo" alt="PS-Cloudlabs">
   <div class="nav_close">
     <div><svg class="icon">
   <title>open-menu</title>
