--- a/search/index.html
+++ b/search/index.html
@@ -9,7 +9,7 @@
   
   >
   <head>
-<title>Search | Clarity</title>
+<title>Search | PS-Cloudlabs</title>
 <meta charset="utf-8">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -59,8 +59,8 @@
   >
 
 <header class="nav_header" >
-  <nav class="nav"><a href='https://p3t35.github.io/ps-cloudlabs/' class="nav_brand nav_item" title="Clarity">
-  <img src="https://p3t35.github.io/ps-cloudlabs/logos/logo.png" class="logo" alt="Clarity">
+  <nav class="nav"><a href='https://p3t35.github.io/ps-cloudlabs/' class="nav_brand nav_item" title="PS-Cloudlabs">
+  <img src="https://p3t35.github.io/ps-cloudlabs/logos/logo.png" class="logo" alt="PS-Cloudlabs">
   <div class="nav_close">
     <div><svg class="icon">
   <title>open-menu</title>
