--- a/public/404.html
+++ b/public/404.html
@@ -7,7 +7,7 @@
   
   >
   <head><script src="/ps-cloudlabs/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=ps-cloudlabs/livereload" data-no-instant defer></script>
-<title>404 Page not found | Clarity</title>
+<title>404 Page not found | PS-Cloudlabs</title>
 <meta charset="utf-8">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -54,8 +54,8 @@
   >
 
 <header class="nav_header" >
-  <nav class="nav"><a href='http://localhost:1313/ps-cloudlabs/' class="nav_brand nav_item" title="Clarity">
-  <img src="http://localhost:1313/ps-cloudlabs/logos/logo.png" class="logo" alt="Clarity">
+  <nav class="nav"><a href='http://localhost:1313/ps-cloudlabs/' class="nav_brand nav_item" title="PS-Cloudlabs">
+  <img src="http://localhost:1313/ps-cloudlabs/logos/logo.png" class="logo" alt="PS-Cloudlabs">
   <div class="nav_close">
     <div><svg class="icon">
   <title>open-menu</title>
