--- a/public/about/index.html
+++ b/public/about/index.html
@@ -9,7 +9,7 @@
   
   >
   <head><script src="/ps-cloudlabs/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=ps-cloudlabs/livereload" data-no-instant defer></script>
-<title>About me | Clarity</title>
+<title>About me | PS-Cloudlabs</title>
 <meta charset="utf-8">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -57,8 +57,8 @@
   >
 
 <header class="nav_header" >
-  <nav class="nav"><a href='http://localhost:1313/ps-cloudlabs/' class="nav_brand nav_item" title="Clarity">
-  <img src="http://localhost:1313/ps-cloudlabs/logos/logo.png" class="logo" alt="Clarity">
+  <nav class="nav"><a href='http://localhost:1313/ps-cloudlabs/' class="nav_brand nav_item" title="PS-Cloudlabs">
+  <img src="http://localhost:1313/ps-cloudlabs/logos/logo.png" class="logo" alt="PS-Cloudlabs">
   <div class="nav_close">
     <div><svg class="icon">
   <title>open-menu</title>
@@ -134,7 +134,6 @@
 <p>This blog is a place where I share my experiences, insights, and the lessons learned while building homelab setups, optimizing cloud environments, and deploying complex virtualized infrastructures. Whether you're looking to automate your workflows with <strong>Terraform</strong>, explore <strong>Kubernetes</strong> in a hybrid cloud setup, or dive into the intricacies of <strong>VCF</strong>, there’s something here for you.</p>
 <p>When I’m not working on client projects or tinkering with my own homelab, I’m researching the latest trends in cloud engineering or finding ways to simplify complex technical problems.</p>
 <p>Thanks for stopping by! Feel free to reach out if you want to chat about virtualization, cloud engineering, or any of the technologies I’m passionate about. Let's connect and collaborate!</p>
-<h3 id="certs"><strong>Certs</strong></h3>
 <p>
   <figure>
   <picture>
@@ -169,8 +168,8 @@
 <p>Peter Summa</p>
 <p>Lindenstr. 2</p>
 <p>74238 Krautheim</p>
-<h3 id="kontakt">Kontakt</h3>
-<p>mail: <a href="mailto:petersumma96@gmail.com">petersumma96@gmail.com</a></p>
+<p><strong>Kontakt</strong>
+mail: <a href="mailto:petersumma96@gmail.com">petersumma96@gmail.com</a></p>
 <h3 id="haftung-für-und-überprüfung-von-inhalten">Haftung für und Überprüfung von Inhalten:</h3>
 <p>Durch die Vorgaben in § 5 DDG bin ich als Webmaster für die Inhalte meines Blogs verantwortlich. Gleichzeitig befreien mich §§ 8 bis einschließlich § 10 TMG von der Verantwortung, übermittelte oder gespeicherte fremde Inhalte zu überwachen. Trotzdem bin ich mir meiner Pflicht bewusst, der Sperrung und Entfernung von Informationen nachzukommen, wie es geltende Gesetze vorgeben.</p>
 
