--- a/about/index.html
+++ b/about/index.html
@@ -137,7 +137,6 @@
 <p>This blog is a place where I share my experiences, insights, and the lessons learned while building homelab setups, optimizing cloud environments, and deploying complex virtualized infrastructures. Whether you're looking to automate your workflows with <strong>Terraform</strong>, explore <strong>Kubernetes</strong> in a hybrid cloud setup, or dive into the intricacies of <strong>VCF</strong>, there’s something here for you.</p>
 <p>When I’m not working on client projects or tinkering with my own homelab, I’m researching the latest trends in cloud engineering or finding ways to simplify complex technical problems.</p>
 <p>Thanks for stopping by! Feel free to reach out if you want to chat about virtualization, cloud engineering, or any of the technologies I’m passionate about. Let's connect and collaborate!</p>
-<h3 id="certs"><strong>Certs</strong></h3>
 <p>
   <figure>
   <picture>
@@ -172,8 +171,8 @@
 <p>Peter Summa</p>
 <p>Lindenstr. 2</p>
 <p>74238 Krautheim</p>
-<h3 id="kontakt">Kontakt</h3>
-<p>mail: <a href="mailto:petersumma96@gmail.com">petersumma96@gmail.com</a></p>
+<p><strong>Kontakt</strong>
+mail: <a href="mailto:petersumma96@gmail.com">petersumma96@gmail.com</a></p>
 <h3 id="haftung-für-und-überprüfung-von-inhalten">Haftung für und Überprüfung von Inhalten:</h3>
 <p>Durch die Vorgaben in § 5 DDG bin ich als Webmaster für die Inhalte meines Blogs verantwortlich. Gleichzeitig befreien mich §§ 8 bis einschließlich § 10 TMG von der Verantwortung, übermittelte oder gespeicherte fremde Inhalte zu überwachen. Trotzdem bin ich mir meiner Pflicht bewusst, der Sperrung und Entfernung von Informationen nachzukommen, wie es geltende Gesetze vorgeben.</p>
 
