--- a/404.html
+++ b/404.html
@@ -24,29 +24,29 @@
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:creator" content="">
 <meta name="twitter:title" content="404 Page not found" />
-<meta name="twitter:image" content="https://p3t35.github.io/ps-cloudlabs/images/thumbnail.png"/>
-<meta property="og:url" content="https://p3t35.github.io/ps-cloudlabs/404.html" />
+<meta name="twitter:image" content="https://ps-cloudlabs.com/images/thumbnail.png"/>
+<meta property="og:url" content="https://ps-cloudlabs.com/404.html" />
 <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="" />
-<meta property="og:image" content="https://p3t35.github.io/ps-cloudlabs/images/thumbnail.png" />
+<meta property="og:image" content="https://ps-cloudlabs.com/images/thumbnail.png" />
 
-<link rel="apple-touch-icon" sizes="180x180" href="https://p3t35.github.io/ps-cloudlabs/icons/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="https://p3t35.github.io/ps-cloudlabs/icons/favicon-32x32.png">
-<link rel="manifest" href="https://p3t35.github.io/ps-cloudlabs/icons/site.webmanifest">
+<link rel="apple-touch-icon" sizes="180x180" href="https://ps-cloudlabs.com/icons/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://ps-cloudlabs.com/icons/favicon-32x32.png">
+<link rel="manifest" href="https://ps-cloudlabs.com/icons/site.webmanifest">
 
-<link rel="canonical" href="https://p3t35.github.io/ps-cloudlabs/404.html">
-
-
-
-<link rel="preload" href="https://p3t35.github.io/ps-cloudlabs/css/styles.a556cef0edd8ecd9821e661f7f201d84cc18d0c6435703889db2949aea0eccb84b7ac9a2bb49093b03f5e7d9ce21c23c705efd6dcbd7e8018afae9a9f32ca095.css" integrity = "sha512-pVbO8O3Y7NmCHmYffyAdhMwY0MZDVwOInbKUmuoOzLhLesmiu0kJOwP159nOIcI8cF79bcvX6AGK&#43;ump8yyglQ==" as="style" crossorigin="anonymous">
+<link rel="canonical" href="https://ps-cloudlabs.com/404.html">
 
 
 
-<link rel="preload" href="https://p3t35.github.io/ps-cloudlabs/en/js/bundle.492fda6518b05b9a608932ca1ecc3458b9f4d6e14a216b83c4fbe942d714198ffbf6dc8b3bbee558bdef41ed5b9be428715559466018ed940cf86eb135f8f6ae.js" as="script" integrity=
-"sha512-SS/aZRiwW5pgiTLKHsw0WLn01uFKIWuDxPvpQtcUGY/79tyLO77lWL3vQe1bm&#43;QocVVZRmAY7ZQM&#43;G6xNfj2rg==" crossorigin="anonymous">
+<link rel="preload" href="https://ps-cloudlabs.com/css/styles.a556cef0edd8ecd9821e661f7f201d84cc18d0c6435703889db2949aea0eccb84b7ac9a2bb49093b03f5e7d9ce21c23c705efd6dcbd7e8018afae9a9f32ca095.css" integrity = "sha512-pVbO8O3Y7NmCHmYffyAdhMwY0MZDVwOInbKUmuoOzLhLesmiu0kJOwP159nOIcI8cF79bcvX6AGK&#43;ump8yyglQ==" as="style" crossorigin="anonymous">
 
 
-<link rel="stylesheet" type="text/css" href="https://p3t35.github.io/ps-cloudlabs/css/styles.a556cef0edd8ecd9821e661f7f201d84cc18d0c6435703889db2949aea0eccb84b7ac9a2bb49093b03f5e7d9ce21c23c705efd6dcbd7e8018afae9a9f32ca095.css" integrity="sha512-pVbO8O3Y7NmCHmYffyAdhMwY0MZDVwOInbKUmuoOzLhLesmiu0kJOwP159nOIcI8cF79bcvX6AGK&#43;ump8yyglQ==" crossorigin="anonymous">
+
+<link rel="preload" href="https://ps-cloudlabs.com/en/js/bundle.b648a2f06fa7b62a6734858fee2189979fd6fc0bc7a8b9e4c8fa89b7fa76ee8dca1992f4319e4b8a6dfdbec90939827bb3cde652605a85098e2abdb8164f7392.js" as="script" integrity=
+"sha512-tkii8G&#43;ntipnNIWP7iGJl5/W/AvHqLnkyPqJt/p27o3KGZL0MZ5Lim39vskJOYJ7s83mUmBahQmOKr24Fk9zkg==" crossorigin="anonymous">
+
+
+<link rel="stylesheet" type="text/css" href="https://ps-cloudlabs.com/css/styles.a556cef0edd8ecd9821e661f7f201d84cc18d0c6435703889db2949aea0eccb84b7ac9a2bb49093b03f5e7d9ce21c23c705efd6dcbd7e8018afae9a9f32ca095.css" integrity="sha512-pVbO8O3Y7NmCHmYffyAdhMwY0MZDVwOInbKUmuoOzLhLesmiu0kJOwP159nOIcI8cF79bcvX6AGK&#43;ump8yyglQ==" crossorigin="anonymous">
 
   </head>
   <body
@@ -57,8 +57,8 @@
   >
 
 <header class="nav_header" >
-  <nav class="nav"><a href='https://p3t35.github.io/ps-cloudlabs/' class="nav_brand nav_item" title="PS-Cloudlabs">
-  <img src="https://p3t35.github.io/ps-cloudlabs/logos/logo.png" class="logo" alt="PS-Cloudlabs">
+  <nav class="nav"><a href='https://ps-cloudlabs.com/' class="nav_brand nav_item" title="PS-Cloudlabs">
+  <img src="https://ps-cloudlabs.com/logos/logo.png" class="logo" alt="PS-Cloudlabs">
   <div class="nav_close">
     <div><svg class="icon">
   <title>open-menu</title>
@@ -79,13 +79,13 @@
         
 
   <div class="nav_parent">
-    <a href="https://p3t35.github.io/ps-cloudlabs/" class="nav_item" title="Home">Home </a>
+    <a href="https://ps-cloudlabs.com/" class="nav_item" title="Home">Home </a>
   </div>
   <div class="nav_parent">
-    <a href="https://p3t35.github.io/ps-cloudlabs/setup/" class="nav_item" title="Setup">Setup </a>
+    <a href="https://ps-cloudlabs.com/setup/" class="nav_item" title="Setup">Setup </a>
   </div>
   <div class="nav_parent">
-    <a href="https://p3t35.github.io/ps-cloudlabs/about/" class="nav_item" title="About">About </a>
+    <a href="https://ps-cloudlabs.com/about/" class="nav_item" title="About">About </a>
   </div>
       
 <div class='follow'>
@@ -201,7 +201,7 @@
 
 <footer class="footer">
   <div class="footer_inner wrap pale">
-    <img src='https://p3t35.github.io/ps-cloudlabs/icons/apple-touch-icon.png' class="icon icon_2 transparent" alt="ps-cloudlabs | Peter Summa">
+    <img src='https://ps-cloudlabs.com/icons/apple-touch-icon.png' class="icon icon_2 transparent" alt="ps-cloudlabs | Peter Summa">
     <p>Copyright&nbsp;<span class="year"></span>&nbsp;PS-CLOUDLABS | PETER SUMMA. All Rights Reserved</p><a class="to_top" href="#documentTop">
   <svg class="icon">
   <title>to-top</title>
@@ -213,9 +213,9 @@
   </div>
 </footer>
 
-<script type="text/javascript" src="https://p3t35.github.io/ps-cloudlabs/en/js/bundle.492fda6518b05b9a608932ca1ecc3458b9f4d6e14a216b83c4fbe942d714198ffbf6dc8b3bbee558bdef41ed5b9be428715559466018ed940cf86eb135f8f6ae.js" integrity="sha512-SS/aZRiwW5pgiTLKHsw0WLn01uFKIWuDxPvpQtcUGY/79tyLO77lWL3vQe1bm&#43;QocVVZRmAY7ZQM&#43;G6xNfj2rg==" crossorigin="anonymous"></script>
+<script type="text/javascript" src="https://ps-cloudlabs.com/en/js/bundle.b648a2f06fa7b62a6734858fee2189979fd6fc0bc7a8b9e4c8fa89b7fa76ee8dca1992f4319e4b8a6dfdbec90939827bb3cde652605a85098e2abdb8164f7392.js" integrity="sha512-tkii8G&#43;ntipnNIWP7iGJl5/W/AvHqLnkyPqJt/p27o3KGZL0MZ5Lim39vskJOYJ7s83mUmBahQmOKr24Fk9zkg==" crossorigin="anonymous"></script>
 
-  <script src="https://p3t35.github.io/ps-cloudlabs/js/search.min.73cb82d8f274395dd220d6594053cd3d3d8ac8c97d874b5142a60b9744f3704d765551e0ade104d5803c66b731f5a7a00ac2cff33c8c9090ff8100169a3e2574.js"></script>
+  <script src="https://ps-cloudlabs.com/js/search.min.73cb82d8f274395dd220d6594053cd3d3d8ac8c97d874b5142a60b9744f3704d765551e0ade104d5803c66b731f5a7a00ac2cff33c8c9090ff8100169a3e2574.js"></script>
 
   </body>
 </html>
