--- a/about-us/index.html
+++ b/about-us/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>https://p3t35.github.io/ps-cloudlabs/about/</title>
-    <link rel="canonical" href="https://p3t35.github.io/ps-cloudlabs/about/">
+    <title>https://ps-cloudlabs.com/about/</title>
+    <link rel="canonical" href="https://ps-cloudlabs.com/about/">
     <meta name="robots" content="noindex">
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; url=https://p3t35.github.io/ps-cloudlabs/about/">
+    <meta http-equiv="refresh" content="0; url=https://ps-cloudlabs.com/about/">
   </head>
 </html>
