--- a/public/404.html
+++ b/public/404.html
@@ -6,7 +6,7 @@
   
   
   >
-  <head><script src="/ps-cloudlabs/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=ps-cloudlabs/livereload" data-no-instant defer></script>
+  <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
 <title>404 Page not found | PS-Cloudlabs</title>
 <meta charset="utf-8">
 
@@ -21,29 +21,29 @@
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:creator" content="">
 <meta name="twitter:title" content="404 Page not found" />
-<meta name="twitter:image" content="http://localhost:1313/ps-cloudlabs/images/thumbnail.png"/>
-<meta property="og:url" content="http://localhost:1313/ps-cloudlabs/404.html" />
+<meta name="twitter:image" content="http://localhost:1313/images/thumbnail.png"/>
+<meta property="og:url" content="http://localhost:1313/404.html" />
 <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="" />
-<meta property="og:image" content="http://localhost:1313/ps-cloudlabs/images/thumbnail.png" />
+<meta property="og:image" content="http://localhost:1313/images/thumbnail.png" />
 
-<link rel="apple-touch-icon" sizes="180x180" href="http://localhost:1313/ps-cloudlabs/icons/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="http://localhost:1313/ps-cloudlabs/icons/favicon-32x32.png">
-<link rel="manifest" href="http://localhost:1313/ps-cloudlabs/icons/site.webmanifest">
+<link rel="apple-touch-icon" sizes="180x180" href="http://localhost:1313/icons/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="http://localhost:1313/icons/favicon-32x32.png">
+<link rel="manifest" href="http://localhost:1313/icons/site.webmanifest">
 
-<link rel="canonical" href="http://localhost:1313/ps-cloudlabs/404.html">
-
-
-
-<link rel="preload" href="http://localhost:1313/ps-cloudlabs/css/styles.a556cef0edd8ecd9821e661f7f201d84cc18d0c6435703889db2949aea0eccb84b7ac9a2bb49093b03f5e7d9ce21c23c705efd6dcbd7e8018afae9a9f32ca095.css" integrity = "sha512-pVbO8O3Y7NmCHmYffyAdhMwY0MZDVwOInbKUmuoOzLhLesmiu0kJOwP159nOIcI8cF79bcvX6AGK&#43;ump8yyglQ==" as="style" crossorigin="anonymous">
+<link rel="canonical" href="http://localhost:1313/404.html">
 
 
 
-<link rel="preload" href="http://localhost:1313/ps-cloudlabs/en/js/bundle.470d638019b1ec17595892df5371e2c7f4da53ebc3885ffec54ba7885d73692d0daec14a05a2d2e0eb58c9dfa1ffe7e6f80599159475c255bf37b44024c75c2c.js" as="script" integrity=
-"sha512-Rw1jgBmx7BdZWJLfU3Hix/TaU&#43;vDiF/&#43;xUuniF1zaS0NrsFKBaLS4OtYyd&#43;h/&#43;fm&#43;AWZFZR1wlW/N7RAJMdcLA==" crossorigin="anonymous">
+<link rel="preload" href="http://localhost:1313/css/styles.a556cef0edd8ecd9821e661f7f201d84cc18d0c6435703889db2949aea0eccb84b7ac9a2bb49093b03f5e7d9ce21c23c705efd6dcbd7e8018afae9a9f32ca095.css" integrity = "sha512-pVbO8O3Y7NmCHmYffyAdhMwY0MZDVwOInbKUmuoOzLhLesmiu0kJOwP159nOIcI8cF79bcvX6AGK&#43;ump8yyglQ==" as="style" crossorigin="anonymous">
 
 
-<link rel="stylesheet" type="text/css" href="http://localhost:1313/ps-cloudlabs/css/styles.a556cef0edd8ecd9821e661f7f201d84cc18d0c6435703889db2949aea0eccb84b7ac9a2bb49093b03f5e7d9ce21c23c705efd6dcbd7e8018afae9a9f32ca095.css" integrity="sha512-pVbO8O3Y7NmCHmYffyAdhMwY0MZDVwOInbKUmuoOzLhLesmiu0kJOwP159nOIcI8cF79bcvX6AGK&#43;ump8yyglQ==" crossorigin="anonymous">
+
+<link rel="preload" href="http://localhost:1313/en/js/bundle.0d036cc8bad2080f4c50d1ad5c14f6106a56b6d12ac69457cb6219c7fcb4181e1ecae48e5a844297763c02a18426d0f0811d2cb368792861cb42618660b894d9.js" as="script" integrity=
+"sha512-DQNsyLrSCA9MUNGtXBT2EGpWttEqxpRXy2IZx/y0GB4eyuSOWoRCl3Y8AqGEJtDwgR0ss2h5KGHLQmGGYLiU2Q==" crossorigin="anonymous">
+
+
+<link rel="stylesheet" type="text/css" href="http://localhost:1313/css/styles.a556cef0edd8ecd9821e661f7f201d84cc18d0c6435703889db2949aea0eccb84b7ac9a2bb49093b03f5e7d9ce21c23c705efd6dcbd7e8018afae9a9f32ca095.css" integrity="sha512-pVbO8O3Y7NmCHmYffyAdhMwY0MZDVwOInbKUmuoOzLhLesmiu0kJOwP159nOIcI8cF79bcvX6AGK&#43;ump8yyglQ==" crossorigin="anonymous">
 
   </head>
   <body
@@ -54,8 +54,8 @@
   >
 
 <header class="nav_header" >
-  <nav class="nav"><a href='http://localhost:1313/ps-cloudlabs/' class="nav_brand nav_item" title="PS-Cloudlabs">
-  <img src="http://localhost:1313/ps-cloudlabs/logos/logo.png" class="logo" alt="PS-Cloudlabs">
+  <nav class="nav"><a href='http://localhost:1313/' class="nav_brand nav_item" title="PS-Cloudlabs">
+  <img src="http://localhost:1313/logos/logo.png" class="logo" alt="PS-Cloudlabs">
   <div class="nav_close">
     <div><svg class="icon">
   <title>open-menu</title>
@@ -76,13 +76,13 @@
         
 
   <div class="nav_parent">
-    <a href="http://localhost:1313/ps-cloudlabs/" class="nav_item" title="Home">Home </a>
+    <a href="http://localhost:1313/" class="nav_item" title="Home">Home </a>
   </div>
   <div class="nav_parent">
-    <a href="http://localhost:1313/ps-cloudlabs/setup/" class="nav_item" title="Setup">Setup </a>
+    <a href="http://localhost:1313/setup/" class="nav_item" title="Setup">Setup </a>
   </div>
   <div class="nav_parent">
-    <a href="http://localhost:1313/ps-cloudlabs/about/" class="nav_item" title="About">About </a>
+    <a href="http://localhost:1313/about/" class="nav_item" title="About">About </a>
   </div>
       
 <div class='follow'>
@@ -198,7 +198,7 @@
 
 <footer class="footer">
   <div class="footer_inner wrap pale">
-    <img src='http://localhost:1313/ps-cloudlabs/icons/apple-touch-icon.png' class="icon icon_2 transparent" alt="ps-cloudlabs | Peter Summa">
+    <img src='http://localhost:1313/icons/apple-touch-icon.png' class="icon icon_2 transparent" alt="ps-cloudlabs | Peter Summa">
     <p>Copyright&nbsp;<span class="year"></span>&nbsp;PS-CLOUDLABS | PETER SUMMA. All Rights Reserved</p><a class="to_top" href="#documentTop">
   <svg class="icon">
   <title>to-top</title>
@@ -210,9 +210,9 @@
   </div>
 </footer>
 
-<script type="text/javascript" src="http://localhost:1313/ps-cloudlabs/en/js/bundle.470d638019b1ec17595892df5371e2c7f4da53ebc3885ffec54ba7885d73692d0daec14a05a2d2e0eb58c9dfa1ffe7e6f80599159475c255bf37b44024c75c2c.js" integrity="sha512-Rw1jgBmx7BdZWJLfU3Hix/TaU&#43;vDiF/&#43;xUuniF1zaS0NrsFKBaLS4OtYyd&#43;h/&#43;fm&#43;AWZFZR1wlW/N7RAJMdcLA==" crossorigin="anonymous"></script>
+<script type="text/javascript" src="http://localhost:1313/en/js/bundle.0d036cc8bad2080f4c50d1ad5c14f6106a56b6d12ac69457cb6219c7fcb4181e1ecae48e5a844297763c02a18426d0f0811d2cb368792861cb42618660b894d9.js" integrity="sha512-DQNsyLrSCA9MUNGtXBT2EGpWttEqxpRXy2IZx/y0GB4eyuSOWoRCl3Y8AqGEJtDwgR0ss2h5KGHLQmGGYLiU2Q==" crossorigin="anonymous"></script>
 
-  <script src="http://localhost:1313/ps-cloudlabs/js/search.min.73cb82d8f274395dd220d6594053cd3d3d8ac8c97d874b5142a60b9744f3704d765551e0ade104d5803c66b731f5a7a00ac2cff33c8c9090ff8100169a3e2574.js"></script>
+  <script src="http://localhost:1313/js/search.min.73cb82d8f274395dd220d6594053cd3d3d8ac8c97d874b5142a60b9744f3704d765551e0ade104d5803c66b731f5a7a00ac2cff33c8c9090ff8100169a3e2574.js"></script>
 
   </body>
 </html>
