--- a/public/setup/index.html
+++ b/public/setup/index.html
@@ -201,11 +201,11 @@
   </thead>
   <tbody>
       <tr>
-          <td>Intel NUC i5</td>
+          <td>Intel NUC13 i5</td>
           <td>2 x 32GB RAM, 1TB SATA SSD, 1TB NVMe SSD</td>
       </tr>
       <tr>
-          <td>Intel NUC i7</td>
+          <td>Intel NUC13 i7</td>
           <td>2 x 32GB RAM, 1TB SATA SSD, 1TB NVMe SSD</td>
       </tr>
       <tr>
