setup add thumbnail

--- a/public/setup/index.html
+++ b/public/setup/index.html
@@ -24,11 +24,11 @@
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:creator" content="">
 <meta name="twitter:title" content="Setup" />
-<meta name="twitter:image" content="http://localhost:1313/images/thumbnail.png"/>
+<meta name="twitter:image" content="http://localhost:1313/setup/homelab-setup-sw.jpeg"/>
 <meta property="og:url" content="http://localhost:1313/setup/" />
 <meta property="og:title" content="Setup" />
 <meta property="og:description" content="My Current Homelab setup" />
-<meta property="og:image" content="http://localhost:1313/images/thumbnail.png" />
+<meta property="og:image" content="http://localhost:1313/setup/homelab-setup-sw.jpeg" />
   <meta name="keywords" content="homelab,intelnuc" />
 
 <link rel="apple-touch-icon" sizes="180x180" href="http://localhost:1313/icons/apple-touch-icon.png">
