--- a/setup/index.html
+++ b/setup/index.html
@@ -27,11 +27,11 @@
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:creator" content="">
 <meta name="twitter:title" content="Setup" />
-<meta name="twitter:image" content="https://ps-cloudlabs.com/images/thumbnail.png"/>
+<meta name="twitter:image" content="https://ps-cloudlabs.com/setup/homelab-setup-sw.jpeg"/>
 <meta property="og:url" content="https://ps-cloudlabs.com/setup/" />
 <meta property="og:title" content="Setup" />
 <meta property="og:description" content="My Current Homelab setup" />
-<meta property="og:image" content="https://ps-cloudlabs.com/images/thumbnail.png" />
+<meta property="og:image" content="https://ps-cloudlabs.com/setup/homelab-setup-sw.jpeg" />
   <meta name="keywords" content="homelab,intelnuc" />
 
 <link rel="apple-touch-icon" sizes="180x180" href="https://ps-cloudlabs.com/icons/apple-touch-icon.png">
