add post automated vcf deployment

--- a/public/search/index.html
+++ b/public/search/index.html
@@ -102,6 +102,14 @@
 </svg>
 
   </a>
+    
+  <a href="http://localhost:1313/index.xml">
+    <svg class="icon">
+  <title>rss</title>
+  <use xlink:href="#rss"></use>
+</svg>
+
+  </a>
 <div class="color_mode">
   <input type="checkbox" class="color_choice" id="mode">
 </div>
