--- a/search/index.html
+++ b/search/index.html
@@ -105,6 +105,14 @@
 </svg>
 
   </a>
+    
+  <a href="https://ps-cloudlabs.com/index.xml">
+    <svg class="icon">
+  <title>rss</title>
+  <use xlink:href="#rss"></use>
+</svg>
+
+  </a>
 <div class="color_mode">
   <input type="checkbox" class="color_choice" id="mode">
 </div>
